force-app/main/default/objects/Dataset1__c/Dataset1__c.object-meta.xml
<CustomObject>
    <label>Patient Problem</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Problems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>