force-app/main/default/objects/Dataset1__c/fields/Date_Diagonised__c.field-meta.xml
<CustomField>
    <fullName>Date_Diagonised__c</fullName>
    <label>Date Diagonised</label>
    <type>Date</type>
</CustomField>