force-app/main/default/objects/Dataset1__c/fields/Date_Onset__c.field-meta.xml
<CustomField>
    <fullName>Date_Onset__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>