force-app/main/default/objects/Dataset1__c/fields/Diagnosis_Type__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Type__c</fullName>
    <label>Diagnosis Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>