force-app/main/default/objects/Dataset1__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>This field is used to record the End Date values in the Patient Problem records.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>