force-app/main/default/objects/Dataset1__c/fields/Form_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Form_Unique_ID__c</fullName>
    <label>Form Unique ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>