force-app/main/default/objects/Dataset1__c/fields/Form_Value__c.field-meta.xml
<CustomField>
    <fullName>Form_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Value</label>
    <referenceTo>Form_Value__c</referenceTo>
    <relationshipLabel>Patient Problems</relationshipLabel>
    <relationshipName>Patient_Problems</relationshipName>
    <type>Lookup</type>
</CustomField>