force-app/main/default/objects/Dataset1__c/fields/ICD_codes__c.field-meta.xml
<CustomField>
    <fullName>ICD_codes__c</fullName>
    <label>ICD codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>