force-app/main/default/objects/Dataset1__c/fields/ICD_Description__c.field-meta.xml
<CustomField>
    <fullName>ICD_Description__c</fullName>
    <label>ICD Description</label>
    <length>7000</length>
    <type>LongTextArea</type>
</CustomField>