force-app/main/default/objects/Dataset1__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>