force-app/main/default/objects/Dataset1__c/fields/Problem_Type__c.field-meta.xml
<CustomField>
    <fullName>Problem_Type__c</fullName>
    <label>Problem Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>