force-app/main/default/objects/Dataset1__c/fields/Template_Problem__c.field-meta.xml
<CustomField>
    <fullName>Template_Problem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Problem Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Template_Problem__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Problem</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Template_Problem__c</referenceTo>
    <relationshipLabel>Patient Problems</relationshipLabel>
    <relationshipName>Problems</relationshipName>
    <type>Lookup</type>
</CustomField>