force-app/main/default/objects/Dataset1__c/recordTypes/EHR_Form_Default.recordType-meta.xml
<RecordType>
    <fullName>EHR_Form_Default</fullName>
    <active>true</active>
    <label>Default</label>
    
</RecordType>